added business information details

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -35,7 +35,7 @@
                         <% end %>
                     </h4>
                     <p><%= business.description %></p>
-                    <%= link_to "View", '#' ,class: "btn btn-primary" %>
+                    <%= link_to "View",  ,class: "btn btn-primary" %>
                 </div>
             </div>
             <!-- /.row -->
