--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -5,7 +5,7 @@
 <body>
 
     <!-- Header Carousel -->
-  <%= image_tag "cover.jpg", width: "100%", height: "94%" %>
+  <%= image_tag "cover2.jpg", width: "100%", height: "70%" %>
   <div class="browse">
     <div id="browse">
        <p class="navbar-text">Browse</p>
@@ -63,6 +63,8 @@
                 </div>
             </div>
         </div>
+
+
         <!-- /.row -->
 
         <!-- Portfolio Section -->
