--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,17 +16,24 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Yellow Pages</title>
    
     <!-- Bootstrap Core CSS -->
     <%= stylesheet_link_tag "bootstrap.min.css", media: "all" %>
     <%= stylesheet_link_tag "modern-business.css", media: "all" %>
     <%= stylesheet_link_tag "font-awesome.min.css", media: "all" %>
+    <%= stylesheet_link_tag "application", media: "all" %>
+    <%= csrf_meta_tags %>
     
         <!-- jQuery -->
     <%= javascript_include_tag "jquery" %>
     <%= javascript_include_tag "bootstrap.min.js" %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    
 
+
+   <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+   <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
     
     
     <script>
@@ -42,13 +49,16 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   <title><%= title %></title>
-  <%= stylesheet_link_tag :application, media: "all" %>
-  <%= csrf_meta_tags %>
+
 </head>
-<body class="<%= body_class %>">
-  <%= render "layouts/header" %>
-  <%= render "flashes" -%>
-  <%= yield %>
-  <%= render "javascript" %>
-</body>
+  <body class="<%= body_class %>">
+    <%= render "layouts/header" %>
+    <%= render "flashes" -%>
+    <%= yield %>
+    <%= render "javascript" %>
+
+ 
+    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script src="js/bootstrap-image-gallery.min.js"></script>
+  </body>
 </html>
