--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,23 +24,27 @@
     <%= stylesheet_link_tag "font-awesome.min.css", media: "all" %>
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag "//blueimp.github.io/Gallery/css/blueimp-gallery.min.css", media: "all" %>
+    <%= stylesheet_link_tag "bootstrap-image-gallery.min", media: "all" %>
+
+
     
+    
+
+
         <!-- jQuery -->
-    <%= javascript_include_tag "jquery" %>
-    <%= javascript_include_tag "bootstrap.min.js" %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%#javascript_include_tag "jquery" %>
+    <%# javascript_include_tag "bootstrap.min.js" %>
+    <%# javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     
+
+    <!-- Error for the accordion panel not closin is thrown because the scripts are called twice -->
 
 
    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
    <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
     
     
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
