--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -25,7 +25,7 @@
                  <% if business.logo.blank? %>
                    <%= image_tag "logos/businesses/nologo.png", width: "100%",:class => "img-responsive" %>
                  <% else %>
-                   <%= image_tag "businesses/"+business.name+"/"+business.logo, width: "80%",:class => "img-thumbnail"%>
+                   <%= image_tag business.logo_url, width: "80%",:class => "img-thumbnail"%>
                  <% end %>
                 </div>
                 <div class="col-md-5">
