--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1130,7 +1130,7 @@ img {
 .img-thumbnail {
   display: inline-block;
   max-width: 100%;
-  height: auto;
+  height: 205px;
   padding: 4px;
   line-height: 1.42857143;
   background-color: #fff;
@@ -5450,7 +5450,7 @@ button.list-group-item-danger.active:focus {
   line-height: 1.3;
 }
 .panel {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   background-color: #fff;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -6757,3 +6757,4 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
