--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,231 +1,31 @@
-    <!-- Page Content -->
-    <div class="container">
-
-                <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Business
-                    <small>******</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Details</li>
-                </ol>
-            </div>
+<!-- Page Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Business
+                <small>******</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="index.html">Home</a>
+                </li>
+                <li class="active">Details</li>
+            </ol>
         </div>
-        <!-- /.row -->
+     </div>
+    <!-- /.row -->
 
-        <!-- Content Row -->
-        <div class="row">
-            <!-- Map Column -->
-            <div class="col-md-7">
-                <% if @business.logo.blank? %>
-                    <%= image_tag "nologo.png", width: "100%",:class => "img-responsive"%>
-                 <% else %>
-                  <%= image_tag @business.logo_url, :class => "img-responsive"%>                  
-                 <% end %>
-            </div>
-            <!-- Contact Details Column -->
-            <div class="col-md-4">
-                <h3><%= @business.name %></h3>
-                <p>
-                    3481 Melrose Place<br>Beverly Hills, CA 90210<br>
-                </p>
-                <% @business.phones.each do |phone| %>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone"><%= phone.phone_type %></abbr>: <%= phone.phone_number %></p>
-                <% end %>
-                <p><i class="fa fa-envelope-o"></i> 
-                    : <a href="<%= @business.email %>"><%= @business.email %></a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours"> Today</abbr>: Active 
-                </p>
-                <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">Tomorrow</abbr>: 10:00 - 22:00  
-                </p>
-                <ul class="list-unstyled list-inline list-social-icons">
-                    <li>
-                        <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
-                    </li>
-                </ul>   
-            </div>
-        </div>
-        <!-- /.row -->
+    <%= render "details" %>
+    <hr>
 
-        <hr>
- 
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Gallery</h2>
-            </div>
-            <div class="col-lg-12">
-                <ul id="myTab" class="nav nav-tabs nav-justified">
-                    <li class="active"><a href="#service-one" data-toggle="tab"><i class="fa fa-camera fa-4x"></i></a>
+    <%= render "gallery" %>
+    <hr>
 
-                    </li>
-                    <li class=""><a href="#service-two" data-toggle="tab"><i class="fa fa-film fa-4x"></i></a>
-                    </li>
-                </ul>
+    <%= render "info" %>
 
-                <div id="myTabContent" class="tab-content">
-                    <div class="tab-pane fade active in" id="service-one"><br><br>
-                        <div class="row">                            
-                            <div id="links" class="text-center" >
-                                <% @business.photos.each do |photo| %>
-                                    <a href="<%= image_path photo.source_url %>" title="Banana" data-gallery>
-                                        <%= image_tag photo.source_url, class: "image_gallery"%>
-                                    </a>
-                                <% end %>                              
-                            </div>  
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="service-two"><br><br>
-                        <!-- Blog Post Row -->
-                        <div class="row">
-                            <div class="col-md-1 text-center">
-                                <!-- <p><i class="fa fa-film fa-4x"></i> -->
-                                <!-- </p> -->
-                            </div>
-                            <div class="col-md-5">
-                                <a href="blog-post.html">
-                                    <img class="img-responsive img-hover" src="http://placehold.it/600x300" alt="">
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <h3><a href="blog-post.html">Blog Post Title</a>
-                                </h3>
-                                <p>by <a href="#">Start Bootstrap</a>
-                                </p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a class="btn btn-primary" href="blog-post.html">Read More <i class="fa fa-angle-right"></i></a>
-                            </div>
-                        </div>
-                    </div>                   
-                </div>
-            </div>
-        </div>
-        <br>
+    <!-- Footer -->
+    <%= render "layouts/footer" %>
 
-        <hr>
-
-
-
-
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel-group" id="accordion" >
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle " data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Regular Hours</a>
-                            </h4>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse">
-                            <div class="panel-body alert alert-success">
-                                Monday    <>  11:00 am - 11:00 pm <br>
-                                Tuesday     11:00 am - 11:00 pm <br>
-                                Wednesday   11:00 am - 11:00 pm <br>
-                                Thursday    11:00 am - 11:00 pm <br>
-                                Friday  11:00 am - 1:00 am <br>
-                                Saturday    11:00 am - 1:00 am <br>
-                                Sunday  12:00 pm - 11:00 pm 
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.panel -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Manu
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse">
-                            <div class="panel-body alert-info">
-                                Manu
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.panel -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Other information</a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse">
-                            <div class="panel-body alert-warning">
-                                Other INFORMATION
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.panel -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Ratings & Review</a>
-                            </h4>
-                        </div>
-                        <div id="collapseFive" class="panel-collapse collapse">
-                            <div class="panel-body alert-warning">
-                                <!-- Comments Form -->
-                                <div class="well">
-                                    <h4>Leave a Comment:</h4>
-                                    <form role="form">
-                                        <div class="form-group">
-                                            <textarea class="form-control" rows="3"></textarea>
-                                        </div>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                    </form>
-                                </div>
-                                <hr>
-                                 <!-- Comment -->
-                                <div class="media">
-                                    <a class="pull-left" href="#">
-                                        <img class="media-object" src="http://placehold.it/64x64" alt="">
-                                    </a>
-                                    <div class="media-body">
-                                        <h4 class="media-heading">Start Bootstrap
-                                            <small>August 25, 2014 at 9:30 PM</small>
-                                        </h4>
-                                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                                        <!-- Nested Comment -->
-                                      
-                                    </div>
-                                </div>
-                            </div>
-                        </div>                        
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.panel-group -->
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->  
-
-            
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </footer>
-
-    </div>
+</div>
 
 
 
@@ -248,39 +48,6 @@
 
 
 
-        <div id="blueimp-gallery" class="blueimp-gallery">
-            <!-- The container for the modal slides -->
-            <div class="slides"></div>
-            <!-- Controls for the borderless lightbox -->
-            <h3 class="title"></h3>
-            <a class="prev">‹</a>
-            <a class="next">›</a>
-            <a class="close">×</a>
-            <a class="play-pause"></a>
-            <ol class="indicator"></ol>
-            <!-- The modal dialog, which will be used to wrap the lightbox content -->
-            <div class="modal fade">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title"></h4>
-                        </div>
-                        <div class="modal-body next"></div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default pull-left prev">
-                                <i class="glyphicon glyphicon-chevron-left"></i>
-                                Previous
-                            </button>
-                            <button type="button" class="btn btn-primary next">
-                                Next
-                                <i class="glyphicon glyphicon-chevron-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
 
