--- a/app/views/businesses/_gallery.html.erb
+++ b/app/views/businesses/_gallery.html.erb
@@ -25,22 +25,11 @@
                     <div class="tab-pane fade" id="service-two"><br><br>
                         <!-- Blog Post Row -->
                         <div class="row">
-                            <div class="col-md-1 text-center">
-                                <!-- <p><i class="fa fa-film fa-4x"></i> -->
-                                <!-- </p> -->
-                            </div>
-                            <div class="col-md-5">
-                                <a href="blog-post.html">
-                                    <img class="img-responsive img-hover" src="http://placehold.it/600x300" alt="">
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <h3><a href="blog-post.html">Blog Post Title</a>
-                                </h3>
-                                <p>by <a href="#">Start Bootstrap</a>
-                                </p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a class="btn btn-primary" href="blog-post.html">Read More <i class="fa fa-angle-right"></i></a>
+                            <!-- <div class="col-md-2"></div>  -->
+                            <div class="col-md-4"> 
+                            <% @business.videos.each do |video| %>                               
+                                <iframe width="560" height="315" src="<%= video.source %>" frameborder="0" allowfullscreen></iframe> 
+                            <% end %>
                             </div>
                         </div>
                     </div>                   
