--- a/app/views/businesses/_info.html.erb
+++ b/app/views/businesses/_info.html.erb
@@ -1,5 +1,6 @@
-    <div class="container" style="padding:50px;">
+     <div class="container" style="padding:50px;">
         <div class="msg"><span class="glyphicon glyphicon glyphicon-ok"></span> Regular hours</div>
+          <% unless @business.working_days.blank? %>  
             <% @business.working_days.each do |work| %>
             <div class="row">
                  <div class="col-md-2"></div>
@@ -25,13 +26,19 @@
                     </div>  
                 <% end %>
                   </div>
-                <% end %><br><br>
+              <% end %>
+              <% else %>
+               <div class="alert alert-info text-center" role="alert"><%= @business.name %> has no working days</div>
+            <% end %><br><br>
+
+    <% unless @business.products.blank? %>
         <div class="msg"><span class="glyphicon glyphicon glyphicon-ok"></span>Manu</div>
             <% @types.each do |type| %>
             <div class="row">              
                 <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <div class="panel manu">
+                <div class="col-md-6">                    
+                    <% unless @products.where(type_id: type.id).blank? %>
+                     <div class="panel manu">
                         <div class="panel-heading">
                             <h3 class="panel-title text-center"><%= type.name %></h3>
                         </div>
@@ -42,12 +49,16 @@
                               <td class="success text-center"><%= @business_products.where(product_id: product.id).first.price %> <i class="fa fa-eur"></i> </td>
                             </tr>   
                         </table>
-                        <% end %>
+                        <% end %>                      
                     </div>
-                </div>                
-           </div>
-        <% end %>
-    </div>
+                  <% end %>
+              </div>                
+         </div>
+      <% end %>
+    <% end %>
+</div>
+
+
      
 
 
@@ -68,7 +79,3 @@
             </div>
         </div>
     </div>
-
-
- 
-
