--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,8 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
+         <li><button type="button" class="btn btn-primary navbar-btn" style="margin-right:10px;" data-toggle="modal" data-target="#myModal">
+              Sugest business</button></li>
           <li><button type="button" class="btn btn-default navbar-btn">Sign in</button></li>
           <li class="dropdown">
            <li><a href="#">Join</a></li>
@@ -40,3 +42,60 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Business sugest</h4>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <div class="row">
+              <form role="form-horizontal denser">
+                  <div class="col-lg-6">
+                      <div class="well well-sm"><strong><span class="glyphicon glyphicon-asterisk"></span>Required Field</strong></div>
+                      <div class="form-group">
+                          <label for="InputName">Email</label>
+                          <div class="input-group">
+                              <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Email" required>
+                              <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="InputEmail">Business</label>
+                          <div class="input-group">
+                              <input type="email" class="form-control" id="InputEmailFirst" name="InputEmail" placeholder="Enter Business Name" required>
+                              <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="InputEmail">Phone Number</label>
+                          <div class="input-group">
+                              <input type="email" class="form-control" id="InputEmailSecond" name="InputEmail" placeholder="Enter Phone Number" required>
+                              <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="InputMessage">Enter Message</label>
+                          <div class="input-group">
+                              <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
+                              <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                          </div>
+                      </div>
+                  </div>   
+                      </form>           
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Send</button>
+          </div>  
+    
+      </div>
+   </div>
+</div>
