modified devise gam and refactored

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
 </head>
   <body class="<%= body_class %>">
-    <%= render "layouts/header" %>
+    <%# render "layouts/header" %>
     <%= render "flashes" -%>
     <%= yield %>
     <%= render "javascript" %>
