--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -5,6 +5,7 @@
 <body>
 
     <!-- Header Carousel -->
+    <%= render "layouts/header" %>
   <%= image_tag "cover2.jpg", width: "100%", height: "70%" %>
   <div class="browse">
     <div id="browse">
@@ -17,12 +18,10 @@
        <p class="navbar-text "><a href="#" class="navbar-link">Attorneys</a></p> 
        <p class="navbar-text "><%= link_to "All businesses", businesses_path, class: "navbar-link"%></p>
     </div>
-  </div>
-  
+  </div>  
 
     <!-- Page Content -->
     <div class="container">
-
         <!-- Marketing Icons Section -->
         <div class="row">
             <div class="col-lg-12">
