added suggesting business with email

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -23,7 +23,7 @@
             <div class="row">   
                 <div class="col-md-7">
                  <% if business.logo.blank? %>
-                   <%= image_tag "logos/businesses/nologo.png", width: "100%",:class => "img-responsive" %>
+                    <%= image_tag "nologo.png", width: "100%",:class => "img-responsive"%>
                  <% else %>
                    <%= image_tag business.logo_url, width: "80%",:class => "img-thumbnail"%>
                  <% end %>
