--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -7,7 +7,8 @@
         <h4 class="modal-title" id="myModalLabel">Sign up</h4>
       </div>
       <div class="modal-body">
-          <br><br>          <div class="main">
+        <br><br>          
+          <div class="main">
               <h3>Please Log In, or <a href="#">Sign Up</a></h3>
               <div class="login-or">
                 <hr class="hr-or">
@@ -32,7 +33,7 @@
               <% end -%>
             </div>  
           <% end %>
-      </div>
+        </div>
       </div>
    </div>
 </div>
