added user page and modified user

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,8 +1,8 @@
  <!-- Navigation -->   
-
-    <!-- Page Content -->
+   <%= render "layouts/header" %>
+    <!-- Page Content --><br>
     <div class="container">
-
+    
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
