--- a/app/views/send_mailer/business_suggest.html.erb
+++ b/app/views/send_mailer/business_suggest.html.erb
@@ -20,10 +20,10 @@
           </td>
           <td >
             <h2>New business called <%= @new_business["name"].upcase %></h2>
-            <p>Business name: <%= @new_business["name"] %></p>
-            <p>Business email: <%= @new_business["email"] %></p>
-            <p>Business tel: <%= @new_business["tel"] %></p>
-            <p>Business text: <%= @new_business["message"] %></p>           
+            <p>Name: <%= @new_business["name"] %></p>
+            <p>Email: <%= @new_business["email"] %></p>
+            <p>Tel: <%= @new_business["tel"] %></p>
+            <p>Message: <%= @new_business["message"] %></p>           
           </td>
         </tr>
         <tr>
