--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">YP</a>
+        <%= link_to "YP", root_path, class: "navbar-brand"%>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -30,7 +30,10 @@
            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"> <%= current_user.email %></i><b class="caret"></b></a>
            <ul class="dropdown-menu">
               <li>
-                <a href="portfolio-2-col.html"><i class="fa fa-male"></i> Profile</a>
+                <%= link_to profiles_path  do %>
+                  <i class="fa fa-male"></i>
+                  Profile
+                <% end %>
               </li>
               <li>
                 <%= link_to destroy_user_session_path, :method => :delete  do %>
