--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -27,6 +27,7 @@
                 <p><i class="fa fa-clock-o"></i> 
                     <abbr title="Hours">Tomorrow</abbr>: 10:00 - 22:00  
                 </p>
+                <%= rating_for @business, "rate", :star => 5 %>  
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
