--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,6 @@
 <!-- Page Content -->
+   <%= render "layouts/header" %>
+<br>
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
@@ -21,15 +23,13 @@
     <hr>
 
      <hr>
-            <div class="container" style="padding:50px;">
+        <div class="container" style="padding:50px;">
             <div class="msg"><span class="glyphicon glyphicon-ok"></span> Reviews</div>
             <div class="col-lg-12">
                 <ul id="myTab" class="nav nav-tabs nav-justified">
                     <li class="active"><a href="#service-3" data-toggle="tab">Comment</i></a>
-
                     </li>
                     <li class=""><a href="#service-4" data-toggle="tab"> Rating</a> </a>
-
                     </li>
                 </ul>
 
@@ -37,22 +37,16 @@
                 <div id="myTabContent" class="tab-content">
                     <div class="tab-pane fade active in" id="service-3"><br><br>
                         <div class="row"> 
-
                             <%= commontator_thread(@business) %>
-                        </div>
-                 
-                    <div class="alert alert-info text-center" role="alert"> No comments</div>
-                  
+                        </div>             
                     </div>
-                    <div class="tab-pane fade" id="service-4"><br><br>
-                        <div class="row">
-                                
-                              
-                       </div> 
 
-                           <div class="alert alert-info text-center" role="alert"> No reviews</div>
-                           
-                        </div>
+                    <div class="tab-pane fade" id="service-4"><br><br>
+                       <div class="row">                                 
+                                          
+                       </div> 
+                       <!-- <div class="alert alert-info text-center" role="alert"> No reviews</div>                            -->
+                    </div>
                     </div>                   
                 </div>
             </div>
