--- a/app/views/commontator/comments/_show.html.erb
+++ b/app/views/commontator/comments/_show.html.erb
@@ -10,16 +10,7 @@
 %>
 
 <div id="comment_<%= comment.id.to_s %>_div" class="comment">
-  <div id="comment_<%= comment.id.to_s %>_top_div" class="comment_div">
-    <span id="comment_<%= comment.id.to_s %>_commontator_span" class="comment_commontator">
-      <%= link.blank? ? name : link_to(name, link) %>
-    </span>
-    <span id="comment_<%= comment.id.to_s %>_actions_span" class="comment_actions">
-      <%= render :partial => 'commontator/comments/actions',
-                 :locals => { :comment => comment,
-                              :user => user } %>
-    </span>
-  </div>
+
   <div id="comment_<%= comment.id.to_s %>_middle_div" class="comment_div">
     <span id="comment_<%= comment.id.to_s %>_avatar_span" class="comment_avatar">
       <%= avatar %>
@@ -29,12 +20,15 @@
                  :locals => { :comment => comment,
                               :user => user } %>
     </span>
-    <div id="comment_<%= comment.id.to_s %>_body_div" class="comment_body">
+    <div id="comment_<%= comment.id.to_s %>_body_div" class="comment_body" style="margin-left:150px">
       <%= render :partial => 'commontator/comments/body',
                  :locals => { :comment => comment } %>
     </div>
   </div>
   <div id="comment_<%= comment.id.to_s %>_bottom_div" class="comment_div">
+    <span id="comment_<%= comment.id.to_s %>_commontator_span" class="comment_commontator">
+      <%= link.blank? ? name : link_to(name, link) %>
+    </span><br>
     <span id="comment_<%= comment.id.to_s %>_created_timestamp_span" class="comment_timestamp">
       <%= comment.created_timestamp %>
     </span>
@@ -45,4 +39,5 @@
     <% end %>
     </span>
   </div>
+  <hr>
 </div>
