--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,11 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "//blueimp.github.io/Gallery/css/blueimp-gallery.min.css", media: "all" %>
     <%= stylesheet_link_tag "bootstrap-image-gallery.min", media: "all" %>
+    
+    <% javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+    
+
    
     <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 
