added send email fot suggest end edit

--- a/app/views/directions/show.html.erb
+++ b/app/views/directions/show.html.erb
@@ -37,8 +37,8 @@
 
     <script>
     
-      	var latitude = 42.6548489//<%= @business.latitude %>
-      	var longitude = 21.161828//<%= @business.longitude %>
+      	var latitude = <%= @business.latitude %>
+      	var longitude = <%= @business.longitude %>
       	
       	var myLatLng = {lat: latitude, lng: longitude };
       
