--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -7,11 +7,17 @@
             <h1 class="page-header">Business
             <small>******</small>
             </h1>
+            <% if flash[:success] %>
+                  <div class="alert alert-success">        
+                      <%= flash[:success] %><br>
+                  </div>
+               <% end %>
             <ol class="breadcrumb">
-                <li><a href="index.html">Home</a>
+                <li><a href="index.html">Business</a>
             </li>
             <li class="active">Details</li>
         </ol>
+
     </div>
 </div>
 <!-- /.row -->
